﻿Pulse Changelog

Pulse-4.12.6
 * Fixed some issues decoding PD0.
 * Fixed some issues with NMEA data type.
 * Fixed some issues exporting data.

Pulse-4.12.5
 - Added Lithium option for the prediction models.

Pulse-4.12.4
 * In CompassCalViewModel, wait for a reply when getting pre and post points.
 * In NmeaDataSet, fix how i check for a NaN value for the GPS speed.

Pulse-4.12.3
 * In ViewDataDvlViewModel, fixed bug in Handle when checking for NULL.
 - Cleaned up the DVL View.

Pulse-4.12.2
 * In ViewDataGraphicalViewModel, verify _eventWaitHandler is not null in DisplayData().
 * In ViewDataDvlViewModel, verify _eventWaitHandler is not null in DisplayData().

Pulse-4.12.1
 * In HeatmapPlotViewModel, fixed InterPlote flag to only change HeatmapPlotSeries.
 * Check _eventWaitData is closed for calling set. 
 * Added SyncRoot to Ensemble to lock it when modifying it.

Pulse-4.12.0
 * In AdcpConfigurationViewModel, pass the deployment duration based off the number of configurations.
 * Changed Deployment Duration from an UInt to a double.
 * Removed the Prediction Model button on the Home page. Use PredictR to reduce the number of prediction models.
 * Removed the Export button on the Home page.  Use the Batch Exporter to reduce the number of exporters.

Pulse-4.11.5
 * In AdcpSubsystemCommands, changed the CepoIndex in the command to a Hex value.

Pulse-4.11.4
 * Updated bug in Prediction Model for Narrowband Max Velocity.

Pulse-4.11.3
 * Update the prediction model for Narrowband Range.

Pulse-4.11.2
 * Fixed bug in DecodeCSHOW with DecodeCWPRT and only 2 parameters.
 * In AdcpSubsystemCommand, increased the number of paramater for CBI from 2 to 3. AdcpSubsystemCommands.CBI_NUM_PARAM
 * Fixed bug in DecodeCSHOW with DecodeCBI() and added the interleave flag.

Pulse-4.11.1
 * Updated Prediction Model System Init Time.

Pulse-4.11.0
 - Updated how the Ensembles are passed to the display.