@@ -1,5 +1,10 @@
 ﻿Pulse Changelog
 
+Pulse-4.12.7
+ - In TerminalAdcpViewModel, made the Wait States for Advanced BREAK doubles in SendAdvancedBreak().
+ - In MatlabMatrixExporter,  added Range of First Bin and Bin Size to ENS data.
+ * In VelocityVector, in GenerateShipVectors, fixed bug with getting the size.
+
 Pulse-4.12.6
  * Fixed some issues decoding PD0.
  * Fixed some issues with NMEA data type.
